--- a/work.html
+++ b/work.html
@@ -16,12 +16,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>work</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
-  <link rel="stylesheet" type="text/css" href="css/work.css?crc=65392223" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3767666948"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=456776089"/>
+  <link rel="stylesheet" type="text/css" href="css/work.css?crc=295919441" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_work.css?crc=3990294502"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_work.css?crc=498062934"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -53,57 +53,77 @@ transition:300ms;
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="Character-Style" id="u7871">LABS</span></p></a>
     </div>
     <a class="anchor_item colelem" id="top-work"></a>
-    <div class="clearfix colelem" id="pu29357"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U29357-BP_infinity" template="work.html" data-type="image" -->
-     <div class="clip_frame clearfix grpelem" id="u29357" data-muse-uid="U29357" data-muse-type="img_frame"><!-- image -->
-      <img class="position_content" id="u29357_img" src="images/pijika.gif?crc=77994269" alt="" width="515" height="285" data-muse-src="images/pijika.gif?crc=77994269"/>
+    <div class="clearfix colelem" id="pppu26717"><!-- group -->
+     <div class="clearfix grpelem" id="ppu26717"><!-- column -->
+      <div class="clearfix colelem" id="pu26717"><!-- group -->
+       <!-- m_editable region-id="editable-static-tag-U26717-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext clip_frame grpelem" id="u26717" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26717" data-muse-type="img_frame"><!-- image --><img class="block" id="u26717_img" src="images/tip_cover-crop-u26717.jpg?crc=4082276319" alt="" width="400" height="241" data-muse-src="images/tip_cover-crop-u26717.jpg?crc=4082276319"/></a>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U26691-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext rgba-background clearfix grpelem" id="u26691-6" href="tribus.html" data-href="page:U25797" data-muse-uid="U26691" data-muse-type="txt_frame"><!-- content --><p id="u26691-2">TRIBUS</p><p id="u26691-4">Art direction, Illustration, Graphic Design</p></a>
+       <!-- /m_editable -->
+      </div>
+      <div class="clearfix colelem" id="pu29631"><!-- group -->
+       <!-- m_editable region-id="editable-static-tag-U29631-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext clip_frame grpelem" id="u29631" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29631" data-muse-type="img_frame"><!-- image --><img class="block" id="u29631_img" src="images/ahtt_namecard-crop-u29631.jpg?crc=155050826" alt="" width="400" height="226" data-muse-src="images/ahtt_namecard-crop-u29631.jpg?crc=155050826"/></a>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U27139-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext rgba-background clearfix grpelem" id="u27139-6" href="anyways.html" data-href="page:U27669" data-muse-uid="U27139" data-muse-type="txt_frame"><!-- content --><p id="u27139-2">Anyways, Here's the Thing</p><p id="u27139-4">Art direction, Identity design, Graphic Design</p></a>
+       <!-- /m_editable -->
+      </div>
      </div>
+     <!-- m_editable region-id="editable-static-tag-U26671-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame clearfix grpelem" id="u26671" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26671" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u26671_img" src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374" alt="" width="427" height="240" data-muse-src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374"/></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U26732-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u26732" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26732" data-muse-type="img_frame"><!-- image --><img class="block" id="u26732_img" src="images/funk_cover-crop-u26732.jpg?crc=3771023534" alt="" width="400" height="241" data-muse-src="images/funk_cover-crop-u26732.jpg?crc=3771023534"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U26675-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26675-6" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26675" data-muse-type="txt_frame"><!-- content --><p id="u26675-2">Between Spaces</p><p id="u26675-4">Art direction, Exhibition Identity, Graphic Design</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U26684-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26684-6" href="funk.html" data-href="page:U24624" data-muse-uid="U26684" data-muse-type="txt_frame"><!-- content --><p id="u26684-2">FUNK</p><p id="u26684-4">Art direction, Illustration, Graphic Design</p></a>
+     <!-- /m_editable -->
+    </div>
+    <div class="clearfix colelem" id="pu26730"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U26730-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u26730" href="reel.html#reel2015" data-href="anchor:U2766:U20695" data-muse-uid="U26730" data-muse-type="img_frame"><!-- image --><img class="block" id="u26730_img" src="images/reel_button_web_new2015-crop-u26730.png?crc=4123254822" alt="" width="401" height="215" data-muse-src="images/reel_button_web_new2015-crop-u26730.png?crc=4123254822"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U29617-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u29617" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29617" data-muse-type="img_frame"><!-- image --><img class="block" id="u29617_img" src="images/55bar_feb28_aw_sm-crop-u29617.png?crc=97859911" alt="" width="400" height="214" data-muse-src="images/55bar_feb28_aw_sm-crop-u29617.png?crc=97859911"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U29614-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29614-6" href="jazzjam.html" data-href="page:U29910" data-muse-uid="U29614" data-muse-type="txt_frame"><!-- content --><p id="u29614-2">Jazz Live Series</p><p id="u29614-4">Poster Design</p></a>
+     <!-- /m_editable -->
+    </div>
+    <div class="clearfix colelem" id="pppu29357"><!-- group -->
+     <div class="clearfix grpelem" id="ppu29357"><!-- column -->
+      <div class="clearfix colelem" id="pu29357"><!-- group -->
+       <!-- m_editable region-id="editable-static-tag-U29357-BP_infinity" template="work.html" data-type="image" -->
+       <div class="clip_frame clearfix grpelem" id="u29357" data-muse-uid="U29357" data-muse-type="img_frame"><!-- image -->
+        <img class="position_content" id="u29357_img" src="images/pijika.gif?crc=77994269" alt="" width="514" height="284" data-muse-src="images/pijika.gif?crc=77994269"/>
+       </div>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U26682-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext rgba-background clearfix grpelem" id="u26682-8" href="pijika.html" data-href="page:U3837" data-muse-uid="U26682" data-muse-type="txt_frame"><!-- content --><p id="u26682">&nbsp;</p><p id="u26682-2">&nbsp;</p><p id="u26682-4">Pijika : Just A Little Bit</p><p id="u26682-6">Cel animation, Music Video</p></a>
+       <!-- /m_editable -->
+      </div>
+      <!-- m_editable region-id="editable-static-tag-U26716" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+      <div class="pointer_cursor museBGSize clearfix colelem" id="u26716" data-muse-uid="U26716"><!-- group -->
+       <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
+       <!-- m_editable region-id="editable-static-tag-U26724-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext rgba-background clearfix grpelem" id="u26724-9" href="scrubbkid.html" data-href="page:U2057" data-muse-uid="U26724" data-muse-type="txt_frame"><!-- content --><p id="u26724-2">Kid : Scrubb</p><p id="u26724-4">Cel animation, Music Video</p><p id="u26724-5">&nbsp;</p><p id="u26724-6">&nbsp;</p><p id="u26724-7">&nbsp;</p></a>
+       <!-- /m_editable -->
+      </div>
+      <!-- /m_editable -->
+     </div>
      <!-- m_editable region-id="editable-static-tag-U29345-BP_infinity" template="work.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u29345" data-muse-uid="U29345" data-muse-type="img_frame"><!-- image -->
       <img class="block" id="u29345_img" src="images/screen%20shot%202017-11-16%20at%2050124%20pm.png?crc=453552672" alt="" width="320" height="526" data-muse-src="images/screen%20shot%202017-11-16%20at%2050124%20pm.png?crc=453552672"/>
      </div>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26730-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u26730" href="reel.html#reel2015" data-href="anchor:U2766:U20695" data-muse-uid="U26730" data-muse-type="img_frame"><!-- image --><img class="block" id="u26730_img" src="images/reel_button_web_new2015.png?crc=53870725" alt="" width="960" height="288" data-muse-src="images/reel_button_web_new2015.png?crc=53870725"/></a>
-     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26690-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26690-14" href="revoke.html" data-href="page:U558" data-muse-uid="U26690" data-muse-type="txt_frame"><!-- content --><p id="u26690">&nbsp;</p><p id="u26690-2">&nbsp;</p><p id="u26690-3">&nbsp;</p><p id="u26690-4">&nbsp;</p><p id="u26690-5">&nbsp;</p><p id="u26690-7">Revoke : Singular</p><p id="u26690-9">Animation, Music Video</p><p id="u26690-10">&nbsp;</p><p id="u26690-11">&nbsp;</p><p id="u26690-12">&nbsp;</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26671-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame clearfix grpelem" id="u26671" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26671" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u26671_img" src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374" alt="" width="427" height="240" data-muse-src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U27142-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u27142" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U27142" data-muse-type="img_frame"><!-- image --><img class="block" id="u27142_img" src="images/ahtt_namecard-crop-u27142.jpg?crc=385231006" alt="" width="399" height="226" data-muse-src="images/ahtt_namecard-crop-u27142.jpg?crc=385231006"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26732-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u26732" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26732" data-muse-type="img_frame"><!-- image --><img class="block" id="u26732_img" src="images/funk_cover-crop-u26732.jpg?crc=3771023534" alt="" width="400" height="241" data-muse-src="images/funk_cover-crop-u26732.jpg?crc=3771023534"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26717-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u26717" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26717" data-muse-type="img_frame"><!-- image --><img class="block" id="u26717_img" src="images/tip_cover-crop-u26717.jpg?crc=4082276319" alt="" width="400" height="241" data-muse-src="images/tip_cover-crop-u26717.jpg?crc=4082276319"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26682-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26682-8" href="pijika.html" data-href="page:U3837" data-muse-uid="U26682" data-muse-type="txt_frame"><!-- content --><p id="u26682">&nbsp;</p><p id="u26682-2">&nbsp;</p><p id="u26682-4">Pijika : Just A Little Bit</p><p id="u26682-6">Cel animation, Music Video</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26716" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <div class="pointer_cursor museBGSize clearfix grpelem" id="u26716" data-muse-uid="U26716"><!-- group -->
-      <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-      <!-- m_editable region-id="editable-static-tag-U26724-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26724-9" href="scrubbkid.html" data-href="page:U2057" data-muse-uid="U26724" data-muse-type="txt_frame"><!-- content --><p id="u26724-2">Kid : Scrubb</p><p id="u26724-4">Cel animation, Music Video</p><p id="u26724-5">&nbsp;</p><p id="u26724-6">&nbsp;</p><p id="u26724-7">&nbsp;</p></a>
-      <!-- /m_editable -->
-     </div>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26675-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26675-6" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26675" data-muse-type="txt_frame"><!-- content --><p id="u26675-2">Between Spaces</p><p id="u26675-4">Art direction, Exhibition Identity, Graphic Design</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U27139-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u27139-6" href="anyways.html" data-href="page:U27669" data-muse-uid="U27139" data-muse-type="txt_frame"><!-- content --><p id="u27139-2">Anyways, Here's the Thing</p><p id="u27139-4">Art direction, Identity design, Graphic Design</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26684-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26684-6" href="funk.html" data-href="page:U24624" data-muse-uid="U26684" data-muse-type="txt_frame"><!-- content --><p id="u26684-2">FUNK</p><p id="u26684-4">Art direction, Illustration, Graphic Design</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26691-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26691-6" href="tribus.html" data-href="page:U25797" data-muse-uid="U26691" data-muse-type="txt_frame"><!-- content --><p id="u26691-2">TRIBUS</p><p id="u26691-4">Art direction, Illustration, Graphic Design</p></a>
      <!-- /m_editable -->
     </div>
     <div class="clearfix colelem" id="pu26696"><!-- group -->
