--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Home</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4134487805" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=308275679"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3767666948"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=488282660"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=134988341" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/pvCRusdxykBUvvRTWLlODdVTtI-4IvVi0JA_uA74UTvfeGMgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfF-qMyMMeM96M9GIQWmDZZMg8-_2aM9.js" type="text/javascript"></script>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   try {Typekit.load();} catch(e) {}
+</script>
     <!--custom head HTML-->
   <script src="http://isotope.metafizzy.co/beta/isotope.pkgd.min.js" type="text/javascript"></script>
 
@@ -50,11 +51,15 @@ transition:300ms;
     <a class="nonblock nontext clearfix grpelem" id="u153-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u153-2"><span class="Character-Style" id="u153">REEL</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="Character-Style" id="u7871">LABS</span></p></a>
    </div>
-   <img class="colelem" id="u15353-11" alt="Hello, I'm Nitcha or Fame, multidisciplinary artist and designer. Welcome to my website. " width="808" height="67" src="images/u15353-11.png?crc=3897694370" data-IBE-flags="txtStyleSrc"/><!-- rasterized frame -->
+   <!-- m_editable region-id="editable-static-tag-U30026-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+   <div class="head clearfix colelem" id="u30026-10" data-muse-uid="U30026" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+    <h1><span class="BoldMenuLink" id="u30026">Hello, I'm Nitcha or Fame, multidisciplinary </span><a class="nonblock" href="project.html#top_projectpage" data-href="anchor:U15248:U20745"><span class="BoldMenuLink" id="u30026-2">artist</span></a><span class="BoldMenuLink" id="u30026-4"> and </span><a class="nonblock" href="work.html#top-work" data-href="anchor:U26666:U28387"><span class="BoldMenuLink" id="u30026-5">designer</span></a><span class="BoldMenuLink" id="u30026-7">.&nbsp; Welcome to my website.</span></h1>
+   </div>
+   <!-- /m_editable -->
    <div class="clearfix colelem" id="ppu29478"><!-- group -->
     <div class="clearfix grpelem" id="pu29478"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U29478-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame clearfix grpelem" id="u29478" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29478" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u29478_img" src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582" alt="" width="533" height="298" data-muse-src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582"/></a>
+     <a class="nonblock nontext clip_frame clearfix grpelem" id="u29478" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29478" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u29478_img" src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582" alt="" width="532" height="298" data-muse-src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U29481-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u29481-13" href="attamatic.html#textneck_short" data-href="anchor:U14827:U19412" data-muse-uid="U29481" data-muse-type="txt_frame"><!-- content --><p id="u29481-2">Text-Neck</p><p id="u29481-4">Wearable Technology, Physical Computing,</p><p id="u29481-6">Research</p><p id="u29481-7">&nbsp;</p><p id="u29481-8">&nbsp;</p><p id="u29481-9">&nbsp;</p><p id="u29481-11">Part of Atta-matic: Mind the Body series</p></a>
@@ -69,38 +74,30 @@ transition:300ms;
    </div>
    <div class="clearfix colelem" id="pu29466"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U29466" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <div class="pointer_cursor museBGSize clearfix grpelem" id="u29466" data-muse-uid="U29466"><!-- group -->
-     <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-     <!-- m_editable region-id="editable-static-tag-U29470-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29470-13" href="attamatic.html#keybod_short" data-href="anchor:U14827:U15234" data-muse-uid="U29470" data-muse-type="txt_frame"><!-- content --><p id="u29470-2">Keybod</p><p id="u29470-4">Wearable Technology, Physical Computing,</p><p id="u29470-6">Research</p><p id="u29470-7">&nbsp;</p><p id="u29470-8">&nbsp;</p><p id="u29470-9">&nbsp;</p><p id="u29470-11">Part of Atta-matic: Mind the Body series</p></a>
-     <!-- /m_editable -->
-    </div>
+    <a class="nonblock nontext museBGSize grpelem" id="u29466" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29466"><!-- simple frame --></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U29467" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <div class="pointer_cursor museBGSize clearfix grpelem" id="u29467" data-muse-uid="U29467"><!-- group -->
-     <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-     <!-- m_editable region-id="editable-static-tag-U29471-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29471-13" href="attamatic.html#clickkick_short" data-href="anchor:U14827:U15547" data-muse-uid="U29471" data-muse-type="txt_frame"><!-- content --><p id="u29471-2">Keybod</p><p id="u29471-4">Wearable Technology, Physical Computing,</p><p id="u29471-6">Research</p><p id="u29471-7">&nbsp;</p><p id="u29471-8">&nbsp;</p><p id="u29471-9">&nbsp;</p><p id="u29471-11">Part of Atta-matic: Mind the Body series</p></a>
-     <!-- /m_editable -->
-    </div>
+    <a class="nonblock nontext museBGSize grpelem" id="u29467" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29467"><!-- simple frame --></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U29470-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u29470-13" href="attamatic.html#keybod_short" data-href="anchor:U14827:U15234" data-muse-uid="U29470" data-muse-type="txt_frame"><!-- content --><p id="u29470-2">Keybod</p><p id="u29470-4">Wearable Technology, Physical Computing,</p><p id="u29470-6">Research</p><p id="u29470-7">&nbsp;</p><p id="u29470-8">&nbsp;</p><p id="u29470-9">&nbsp;</p><p id="u29470-11">Part of Atta-matic: Mind the Body series</p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U29471-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u29471-13" href="attamatic.html#clickkick_short" data-href="anchor:U14827:U15547" data-muse-uid="U29471" data-muse-type="txt_frame"><!-- content --><p id="u29471-2">Keybod</p><p id="u29471-4">Wearable Technology, Physical Computing,</p><p id="u29471-6">Research</p><p id="u29471-7">&nbsp;</p><p id="u29471-8">&nbsp;</p><p id="u29471-9">&nbsp;</p><p id="u29471-11">Part of Atta-matic: Mind the Body series</p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu29465"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U29465" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <div class="pointer_cursor museBGSize clearfix grpelem" id="u29465" data-muse-uid="U29465"><!-- group -->
-     <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-     <!-- m_editable region-id="editable-static-tag-U29469-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29469-7" href="lick-it.html" data-href="page:U13269" data-muse-uid="U29469" data-muse-type="txt_frame"><!-- content --><p id="u29469-2">Lick it!</p><p id="u29469-4">Experimental Arcade Game, Physical Game</p><p id="u29469-5">&nbsp;</p></a>
-     <!-- /m_editable -->
-    </div>
+    <a class="nonblock nontext museBGSize grpelem" id="u29465" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29465"><!-- simple frame --></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U29468" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <div class="pointer_cursor museBGSize clearfix grpelem" id="u29468" data-muse-uid="U29468"><!-- group -->
-     <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-     <!-- m_editable region-id="editable-static-tag-U29472-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29472-7" href="dilation.html" data-href="page:U13769" data-muse-uid="U29472" data-muse-type="txt_frame"><!-- content --><p id="u29472-2">Dilation</p><p id="u29472-4">Paper Sculpture, Projection Mapping, GLSL shaders</p><p id="u29472-5">&nbsp;</p></a>
-     <!-- /m_editable -->
-    </div>
+    <a class="nonblock nontext museBGSize grpelem" id="u29468" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29468"><!-- simple frame --></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U29469-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u29469-7" href="lick-it.html" data-href="page:U13269" data-muse-uid="U29469" data-muse-type="txt_frame"><!-- content --><p id="u29469-2">Lick it!</p><p id="u29469-4">Experimental Arcade Game, Physical Game</p><p id="u29469-5">&nbsp;</p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U29472-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u29472-7" href="dilation.html" data-href="page:U13769" data-muse-uid="U29472" data-muse-type="txt_frame"><!-- content --><p id="u29472-2">Dilation</p><p id="u29472-4">Paper Sculpture, Projection Mapping, GLSL shaders</p><p id="u29472-5">&nbsp;</p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu29461"><!-- group -->
