--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3767666948"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=488282660"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=134988341" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4134833487" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/pvCRusdxykBUvvRTWLlODdVTtI-4IvVi0JA_uA74UTvfeGMgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfF-qMyMMeM96M9GIQWmDZZMg8-_2aM9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/_azD3Nv3bJkvxCxyUItzZe1TDIs3NlxPJRVQZiTi8_3feGMgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfF-qMyMMeM96M9GIQWmDZZMg0Oa2aM9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -86,15 +86,17 @@ transition:300ms;
     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29471-13" href="attamatic.html#clickkick_short" data-href="anchor:U14827:U15547" data-muse-uid="U29471" data-muse-type="txt_frame"><!-- content --><p id="u29471-2">Keybod</p><p id="u29471-4">Wearable Technology, Physical Computing,</p><p id="u29471-6">Research</p><p id="u29471-7">&nbsp;</p><p id="u29471-8">&nbsp;</p><p id="u29471-9">&nbsp;</p><p id="u29471-11">Part of Atta-matic: Mind the Body series</p></a>
     <!-- /m_editable -->
    </div>
-   <div class="clearfix colelem" id="pu29465"><!-- group -->
-    <!-- m_editable region-id="editable-static-tag-U29465" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext museBGSize grpelem" id="u29465" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29465"><!-- simple frame --></a>
-    <!-- /m_editable -->
+   <div class="clearfix colelem" id="ppu29465"><!-- group -->
+    <div class="clearfix grpelem" id="pu29465"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U29465" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext museBGSize grpelem" id="u29465" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29465"><!-- simple frame --></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U29469-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29469-7" href="lick-it.html" data-href="page:U13269" data-muse-uid="U29469" data-muse-type="txt_frame"><!-- content --><p id="u29469-2">Lick it!</p><p id="u29469-4">Experimental Arcade Game, Physical Game</p><p id="u29469-5">&nbsp;</p></a>
+     <!-- /m_editable -->
+    </div>
     <!-- m_editable region-id="editable-static-tag-U29468" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
     <a class="nonblock nontext museBGSize grpelem" id="u29468" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29468"><!-- simple frame --></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U29469-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background clearfix grpelem" id="u29469-7" href="lick-it.html" data-href="page:U13269" data-muse-uid="U29469" data-muse-type="txt_frame"><!-- content --><p id="u29469-2">Lick it!</p><p id="u29469-4">Experimental Arcade Game, Physical Game</p><p id="u29469-5">&nbsp;</p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U29472-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29472-7" href="dilation.html" data-href="page:U13769" data-muse-uid="U29472" data-muse-type="txt_frame"><!-- content --><p id="u29472-2">Dilation</p><p id="u29472-4">Paper Sculpture, Projection Mapping, GLSL shaders</p><p id="u29472-5">&nbsp;</p></a>
