--- a/work.html
+++ b/work.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>work</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3767666948"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=456776089"/>
-  <link rel="stylesheet" type="text/css" href="css/work.css?crc=295919441" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
+  <link rel="stylesheet" type="text/css" href="css/work.css?crc=3991999523" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_work.css?crc=498062934"/>
@@ -52,7 +52,6 @@ transition:300ms;
      <a class="nonblock nontext clearfix grpelem" id="u153-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u153-2"><span class="Character-Style" id="u153">REEL</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="Character-Style" id="u7871">LABS</span></p></a>
     </div>
-    <a class="anchor_item colelem" id="top-work"></a>
     <div class="clearfix colelem" id="pppu26717"><!-- group -->
      <div class="clearfix grpelem" id="ppu26717"><!-- column -->
       <div class="clearfix colelem" id="pu26717"><!-- group -->
@@ -62,6 +61,7 @@ transition:300ms;
        <!-- m_editable region-id="editable-static-tag-U26691-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
        <a class="nonblock nontext rgba-background clearfix grpelem" id="u26691-6" href="tribus.html" data-href="page:U25797" data-muse-uid="U26691" data-muse-type="txt_frame"><!-- content --><p id="u26691-2">TRIBUS</p><p id="u26691-4">Art direction, Illustration, Graphic Design</p></a>
        <!-- /m_editable -->
+       <a class="anchor_item grpelem" id="top-work"></a>
       </div>
       <div class="clearfix colelem" id="pu29631"><!-- group -->
        <!-- m_editable region-id="editable-static-tag-U29631-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
