--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3767666948"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4134833487" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=156665214" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/_azD3Nv3bJkvxCxyUItzZe1TDIs3NlxPJRVQZiTi8_3feGMgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfF-qMyMMeM96M9GIQWmDZZMg0Oa2aM9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/tVPS3wW5scKaLv7INgFpzA8SDyzCWbEFXELffT8bktvfeGMgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfF-qMyMMeM96M9GIQWmDZZMgTZ1eaM9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -83,7 +83,7 @@ transition:300ms;
     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29470-13" href="attamatic.html#keybod_short" data-href="anchor:U14827:U15234" data-muse-uid="U29470" data-muse-type="txt_frame"><!-- content --><p id="u29470-2">Keybod</p><p id="u29470-4">Wearable Technology, Physical Computing,</p><p id="u29470-6">Research</p><p id="u29470-7">&nbsp;</p><p id="u29470-8">&nbsp;</p><p id="u29470-9">&nbsp;</p><p id="u29470-11">Part of Atta-matic: Mind the Body series</p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U29471-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background clearfix grpelem" id="u29471-13" href="attamatic.html#clickkick_short" data-href="anchor:U14827:U15547" data-muse-uid="U29471" data-muse-type="txt_frame"><!-- content --><p id="u29471-2">Keybod</p><p id="u29471-4">Wearable Technology, Physical Computing,</p><p id="u29471-6">Research</p><p id="u29471-7">&nbsp;</p><p id="u29471-8">&nbsp;</p><p id="u29471-9">&nbsp;</p><p id="u29471-11">Part of Atta-matic: Mind the Body series</p></a>
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u29471-13" href="attamatic.html#clickkick_short" data-href="anchor:U14827:U15547" data-muse-uid="U29471" data-muse-type="txt_frame"><!-- content --><p id="u29471-2">Click–kick</p><p id="u29471-4">Wearable Technology, Physical Computing,</p><p id="u29471-6">Research</p><p id="u29471-7">&nbsp;</p><p id="u29471-8">&nbsp;</p><p id="u29471-9">&nbsp;</p><p id="u29471-11">Part of Atta-matic: Mind the Body series</p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="ppu29465"><!-- group -->
