--- a/about.html
+++ b/about.html
@@ -16,16 +16,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>About</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3767666948"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=456776089"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4015320533" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=222928744" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/pjWN5ActFm4z2p_io8fif9WdmZLxKfV3cuq2S6BFP-Sfe7vgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfF-qMyMMeM96MPGHfFPqMyMMeMw6MPG4f5BxIMMjgfMgH6GJXEbfIMMj2PMgH6GJu-bfIMMj2KMgP6sFiWF8qMYQ1SYSgb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/WHGYqRdAW5sx_mRG7CkFmj-IplbGkLs2bjzU3rKVw4Ife7vgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfF-qMyMMeM96MPGHfFPqMyMMeMw6MPG4f5BxIMMjgfMgH6GJXEbfIMMj2PMgH6GJu-bfIMMj2KMgP6sFiWF8qMeZ_zD6gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -54,7 +54,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <div class="clearfix colelem" id="u24160"><!-- group -->
        <!-- m_editable region-id="editable-static-tag-U24058-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-       <div class="clearfix grpelem" id="u24058-112" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+       <div class="clearfix grpelem" id="u24058-115" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
         <p id="u24058-2">Press</p>
         <p id="u24058-4"><span id="u24058-3">Below you can find some on-line press articles.</span></p>
         <p id="u24058-7"><a class="nonblock" href="http://www.fastcoexist.com/3051717/this-wearable-keyboard-makes-you-move-if-you-want-to-write-an-email">Fast Co.</a></p>
@@ -85,20 +85,22 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <p id="u24058-71">&nbsp;</p>
         <p id="u24058-73">–</p>
         <p id="u24058-75">Teaching, Workshop, and Speaking Engagements</p>
-        <p id="u24058-81"><span id="u24058-76">Interactive Accessories</span>, <a class="nonblock" href="http://manufactureny.org/">Manufacture NY</a>, New York</p>
-        <p id="u24058-82">&nbsp;</p>
-        <p id="u24058-88"><span id="u24058-83">Wearable Technology Class</span>, <a class="nonblock" href="http://www.ofcn.io/">Ofcourse</a>, Brooklyn</p>
-        <p id="u24058-89">&nbsp;</p>
-        <p id="u24058-94"><span id="u24058-90">Modes of Collaboration: </span><a class="nonblock" href="http://ctc.tc.columbia.edu/past-1/2018/5/3/modes-of-collaboration"><span id="u24058-91">Creative Technology Symposium V</span></a><span id="u24058-93">, part of session Two: Collaboration with Machines, The Creative Technologies Curriculum (CTC) at Teacher Collage, Columbia University, New York</span></p>
-        <p id="u24058-95">&nbsp;</p>
-        <p id="u24058-97">–</p>
-        <p id="u24058-99">Publication</p>
-        <p id="u24058-103"><a class="nonblock" href="http://dl.acm.org/authorize?N46040"><span id="u24058-100">Atta-matic: mind the body</span> (Extended Version)</a></p>
-        <p id="u24058-105">Nitcha Tothong</p>
-        <p id="u24058-107">ISWC '17 Proceedings of the 2017 ACM International Symposium on Wearable Computers, 2017</p>
-        <p id="u24058-108">&nbsp;</p>
-        <p id="u24058-109">&nbsp;</p>
-        <p id="u24058-110">&nbsp;</p>
+        <p id="u24058-77"><span id="u24058-76">Interactive Lighting Class, Brownsville Community Justice Center, Brooklyn (Co-organizing and co-teaching with Henry Lam)</span></p>
+        <p id="u24058-78">&nbsp;</p>
+        <p id="u24058-83"><span id="u24058-79">Modes of Collaboration: </span><a class="nonblock" href="http://ctc.tc.columbia.edu/past-1/2018/5/3/modes-of-collaboration"><span id="u24058-80">Creative Technology Symposium V</span></a><span id="u24058-82">, part of session Two: Collaboration with Machines, The Creative Technologies Curriculum (CTC) at Teacher Collage, Columbia University, New York</span></p>
+        <p id="u24058-84">&nbsp;</p>
+        <p id="u24058-90"><span id="u24058-85">Wearable Technology Class</span>, <a class="nonblock" href="http://www.ofcn.io/">Ofcourse</a>, Brooklyn</p>
+        <p id="u24058-91">&nbsp;</p>
+        <p id="u24058-97"><span id="u24058-92">Interactive Accessories</span>, <a class="nonblock" href="http://manufactureny.org/">Manufacture NY</a>, New York</p>
+        <p id="u24058-98">&nbsp;</p>
+        <p id="u24058-100">–</p>
+        <p id="u24058-102">Publication</p>
+        <p id="u24058-106"><a class="nonblock" href="http://dl.acm.org/authorize?N46040"><span id="u24058-103">Atta-matic: mind the body</span> (Extended Version)</a></p>
+        <p id="u24058-108">Nitcha Tothong</p>
+        <p id="u24058-110">ISWC '17 Proceedings of the 2017 ACM International Symposium on Wearable Computers, 2017</p>
+        <p id="u24058-111">&nbsp;</p>
+        <p id="u24058-112">&nbsp;</p>
+        <p id="u24058-113">&nbsp;</p>
        </div>
        <!-- /m_editable -->
       </div>
